# electric-era-challenge

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  calculate.cpp  calculate.hpp  main.cpp  main.hpp
test/: CMakeLists.txt  test.cpp
